@@ -128,10 +128,14 @@ class RepoSync:
             if not has_rpm_list and repo.mirror_locally:
                 # if we have not requested only certain RPMs, use reposync
                 cmd = "/usr/bin/reposync --config=%s --repoid=%s --download_path=%s" % (temp_file, repo.name, store_path)
+            
                 if repo.arch != "":
                     if repo.arch == "x86":
                        repo.arch = "i386" # FIX potential arch errors
-                    cmd = "%s -a %s" % (cmd, repo.arch)
+                       # counter-intuitive, but we want the newish kernels too
+                       cmd = "%s -a i686" % (cmd, repo.arch)
+                    else:
+                       cmd = "%s -a %s" % (cmd, repo.arch)
                     
                 print _("- %s") % cmd
                 cmds.append(cmd)
